--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
              <p class="subtitulo-seccion">Facilitamos conexiones inmobiliarias confiables y transparentes</p>          
             <div class="valores-nosotros iconos-nosotros">
                 <div class="valor-item icono">
-                    <img src="img/icono1.svg" alt="Icono seguridad" loading="lazy">
+                    <img src="img/candado.png" alt="Icono seguridad" loading="lazy">
                     <h3>Seguridad</h3>
                     <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
                 </div>
                 <div class="valor-item icono">
-                   <img src="img/icono2.svg" alt="Icono Precio" loading="lazy">
+                   <img src="img/dinero.png" alt="Icono Precio" loading="lazy">
                    <h3>Precio</h3>
                    <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
                 </div>
                 <div class=" valor-item icono">
-                    <img src="img/icono3.svg" alt="Icono Tiempo" loading="lazy">
+                    <img src="img/chequeo-de-tiempo.png" alt="Icono Tiempo" loading="lazy">
                     <h3>A Tiempo</h3>
                     <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
                 </div>
